# Undergraduate-thesis-2026

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  agent.sh  docker-compose.yml  ocr.sh  pyproject.toml  refactor.md  ui.sh
.github/workflows/: cd.yml  ci.yml
data/: README.md
docs/: architecture.md  thesis-diagrams.md
docs/project-phases/: 06-ocr-and-data-flow.md
docs/report_templates/Thesis/: cover.tex  thesis.tex
docs/report_templates/uet_graduation_thesis_template/: README.md  main.tex
eval/: README.md  __init__.py  __main__.py  baseline.py  batch_run.py  claim_context.py  cli.py  document_text.py  ground_truth.py  json_utils.py  labeling.py  labeling_app.py  paths.py  reference_labels.py  runner.py  schemas.py  token_usage.py
eval/dataset/: build.py  ground_truth.json
eval/metrics/: __init__.py  accuracy.py  agent_behavior.py  human_factor.py  medical.py  performance.py
eval/reports/: rq_report.md
eval/tests/: test_baseline_run.py  test_batch_run.py  test_ground_truth_clean.py  test_labeling.py  test_metrics.py  test_reference_labels.py  test_runner.py  test_token_usage.py
infrastructure/dify/: .env.example  README.md  docker-compose.yaml
infrastructure/langflow/: .env.example  README.md  docker-compose.langflow.yml
infrastructure/langflow/custom-components/: __init__.py  icd_lookup.py  policy_checker.py
infrastructure/langflow/example-flows/: README.md
infrastructure/langfuse/: .env.example  README.md  docker-compose.langfuse.yml
infrastructure/milvus/: .env.example  README.md  docker-compose.yml
infrastructure/mongodb/: .env.example  README.md  docker-compose-mongodb.yml  docker-compose.yml
infrastructure/mongodb/scripts/: 01-init-db.js  create_mongo_index.sh  ingest_medicines.py  setup.js
infrastructure/scripts/: backup.sh  restore.sh
models/: embedding.py
references/: references.md
src/agent-service/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  config.py  llm_client.py  main.py  mongodb_client.py  requirements.txt
src/agent-service/agents/: __init__.py  audit.py  completeness.py  completeness_agent.py  decision.py  factory.py  final_agent.py  helpers.py  human_review.py  node_specs.py  output_parsing.py  prompt_builders.py  quality.py  quality_agent.py
src/agent-service/api/: __init__.py  errors.py  helpers.py  hitl.py  models.py  routes.py  schemas.py  sse.py  status.py  upload.py  workflows.py
src/agent-service/app/: config.py  main.py
src/agent-service/config/: __init__.py
src/agent-service/core/: __init__.py  graph.py  router.py
src/agent-service/docs/: 01-api-layer.md  02-workflow-graph.md  03-agents-prompts-skills.md  04-services-persistence.md  05-schemas-state-contracts.md  06-streamlit-ui.md  07-testing-operations.md  README.md  REFACTORING.md
src/agent-service/graphs/: __init__.py  agent_review.py  claim_workflow.py  constants.py  human_review.py  ocr_extraction.py  routing.py  state.py  workflow_policy.py
src/agent-service/middleware/: __init__.py  middleware.py
src/agent-service/multi_agent/: __init__.py
src/agent-service/persistence/: __init__.py  mongodb_config.py
src/agent-service/prompts/: completeness_agent.md  diagnosis_verification.md  final_agent.md  full_flow.md  medical_verification.md  quality_agent.md  system_prompt.md  verifier_agent.md
src/agent-service/schemas/: __init__.py  agent_outputs.py  verifier_outputs.py
src/agent-service/services/: __init__.py  file_policy.py  graph_service.py  human_review_application.py  ocr_pipeline.py  ocr_service.py  workflow_state.py
src/ocr-service/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  schemas.json  schemas.py
src/rag-service/: .env.example  Dockerfile  README.md  requirements.txt
src/shared/: README.md
(+269 files in other folders)
