[project]
name = "insurance-claims-system"
version = "1.0.0"
description = "Agentic AI Insurance Claims Processing System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Undergraduate Thesis Project"}
]
keywords = ["insurance", "claims", "ai", "agentic", "langgraph", "ocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.0.50",
    "langgraph-checkpoint-mongodb>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=1.0.0",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "requests>=2.31.0",
    "langfuse>=2.0.0",
    "tavily-python>=0.3.3",
    "streamlit>=1.28.0",
    "streamlit-autorefresh>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
eval = [
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/Undergraduate-thesis"
Documentation = "https://github.com/your-repo/Undergraduate-thesis#readme"
Repository = "https://github.com/your-repo/Undergraduate-thesis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "AGENTS.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/agent-service/tests", "src/ocr-service/tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "src/agent-service/skills/.*/scripts/",
    "src/agent-service/skills/.*/SKILL\\.md",
]

[tool.coverage.run]
source = ["src/"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[dependency-groups]
agent-service = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.0.50",
    "langgraph-checkpoint-mongodb>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=1.0.0",
    "langfuse>=0.12.0",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "requests>=2.31.0",
    "tavily-python>=0.3.3",
    "streamlit>=1.28.0",
    "tavily"
]
ocr-service = [
    "google-genai>=1.51.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "httpx>=0.23.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.27.2.3",
]
